crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__malformed_empty_collections_keep_opener_and_comma_guidance-4.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "value = [(),]"
---
nash::syntax

  × Expected an expression before the closing delimiter.
   ╭─[src/Main.nash:1:13]
 1 │ value = [(),]
   ·             ─
   ╰────
  help: Add the missing expression, or remove a trailing comma.
