crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__module_name_lowercase.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nmodule main exposing (..)"
---
nash::syntax

  × Expected an uppercase module name.
   ╭─[src/Main.nash:1:8]
 1 │ module main exposing (..)
   ·        ─
   ╰────
  help: Use a name such as `Main` or `Cardano.Tx`.
