crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__module_name_mismatch.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: module Other exposing (..)
---
nash::syntax::module_name_mismatch

  × Module name must be `Main`, found `Other`.
   ╭─[src/Main.nash:1:8]
 1 │ module Other exposing (..)
   ·        ─────
   ╰────
  help: Make the module name match its file path.
