crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_alias_missing_name.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf (x as) = x"
---
UNFINISHED PATTERN

  × I was expecting to see a variable name after the `as` keyword:
   ╭─[src/Main.nash:1:8]
 1 │ f (x as) = x
   ·        ─
   ╰────
  help: The `as` keyword lets you write patterns like ((x,y) as point) so you can refer
        to individual parts of the tuple with x and y or you refer to the whole thing
        with point. So I was expecting to see a variable name after the `as` keyword
        here. Sometimes people just want to use `as` as a variable name though. Try
        using a different name in that case!
