crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__pattern_reserved_record_field.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
nash::diagnostic

  × I was not expecting to see `if` as a record field name:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: This is a reserved word, not available for variable names. Try another name!
